# chatbot_simple

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.in
backend/app/: main.py
backend/chatbot/: logging.py  utils.py
backend/chatbot/agent/: answering.py  main.py  mock_agent.py  models.py  utils.py
backend/chatbot/api/: lifespan.py  main.py  models.py  routes.py  routes_auth.py  utils.py
backend/chatbot/auth/: auth.py  db.py  models.py  token.py  utils.py
backend/chatbot/auth_db/: database.py  utils.py
backend/chatbot/messages/: conversion.py  models.py
backend/chatbot/services/: auth.py  chat.py  models.py  thread.py  utils.py
backend/chatbot/vector_store/: chunker.py  vector_store.py
backend/scripts/: dev_agent.py  dev_chat.py  dev_chatbot.py  dev_images.py  dev_mock.py  dev_ollama.py  dev_ollama_embedding.py  populate_db.py  test_chat.py
backend/tests/: test_auth.py  test_fast_api.py  test_fast_api_auth.py  test_fast_api_chat.py  test_fast_api_thread.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/pages/: index.js
frontend/pages/api/: items.js
playground/: script.js
